--- a/KeyPointTask/Controllers/Cells/TbViewCell/BannerCell.xib
+++ b/KeyPointTask/Controllers/Cells/TbViewCell/BannerCell.xib
@@ -1,21 +1,52 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="BannerCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" restorationIdentifier="BannerCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="BannerCell" rowHeight="193" id="KGk-i7-Jjw" customClass="BannerCell" customModule="KeyPointTask" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="193"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="193"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IvI-sM-gMo">
+                        <rect key="frame" x="5" y="5" width="310" height="143"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="143" id="aMu-q1-Sl1"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sCM-Dw-x2q">
+                        <rect key="frame" x="16" y="163" width="294" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="Z1r-2L-GAp"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="sCM-Dw-x2q" secondAttribute="trailing" constant="10" id="B2J-V8-Nio"/>
+                    <constraint firstAttribute="trailing" secondItem="IvI-sM-gMo" secondAttribute="trailing" constant="5" id="Fcy-fs-HGB"/>
+                    <constraint firstItem="sCM-Dw-x2q" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="Gox-cD-41d"/>
+                    <constraint firstItem="sCM-Dw-x2q" firstAttribute="top" secondItem="IvI-sM-gMo" secondAttribute="bottom" constant="15" id="K37-m4-w8Q"/>
+                    <constraint firstItem="IvI-sM-gMo" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="tWY-Pi-mss"/>
+                    <constraint firstItem="IvI-sM-gMo" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="yO3-EP-syZ"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="bannerImage" destination="IvI-sM-gMo" id="PDG-a2-XwL"/>
+                <outlet property="labelTitlt" destination="sCM-Dw-x2q" id="D7B-4e-iBd"/>
+            </connections>
+            <point key="canvasLocation" x="146.56488549618319" y="79.225352112676063"/>
         </tableViewCell>
     </objects>
 </document>
