--- a/KeyPointTask/Controllers/Cells/TbViewCell/YouTubeCell.xib
+++ b/KeyPointTask/Controllers/Cells/TbViewCell/YouTubeCell.xib
@@ -1,21 +1,60 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="YouTubeCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" restorationIdentifier="YouTubeCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="YouTubeCell" rowHeight="375" id="KGk-i7-Jjw" customClass="YouTubeCell" customModule="KeyPointTask" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="375"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="375"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="X9b-wj-Pek">
+                        <rect key="frame" x="35" y="5" width="250" height="250"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="250" id="KKb-QP-1A5"/>
+                            <constraint firstAttribute="width" constant="250" id="lwz-Rg-BX3"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RqM-yK-aOJ">
+                        <rect key="frame" x="10" y="265" width="300" height="20.333333333333314"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ywq-3w-vte">
+                        <rect key="frame" x="10" y="293" width="300" height="49"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="Ywq-3w-vte" firstAttribute="top" secondItem="RqM-yK-aOJ" secondAttribute="bottom" constant="7.6666666666666856" id="IVf-UQ-dHT"/>
+                    <constraint firstItem="Ywq-3w-vte" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="MHi-Wc-pH6"/>
+                    <constraint firstItem="X9b-wj-Pek" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="35" id="Uau-UU-UC4"/>
+                    <constraint firstAttribute="trailing" secondItem="X9b-wj-Pek" secondAttribute="trailing" constant="35" id="WHi-Ro-KcA"/>
+                    <constraint firstItem="RqM-yK-aOJ" firstAttribute="top" secondItem="X9b-wj-Pek" secondAttribute="bottom" constant="10" id="a0x-ze-PYX"/>
+                    <constraint firstItem="RqM-yK-aOJ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="aY3-Bd-uj0"/>
+                    <constraint firstAttribute="trailing" secondItem="Ywq-3w-vte" secondAttribute="trailing" constant="10" id="lq0-A6-Xif"/>
+                    <constraint firstItem="X9b-wj-Pek" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="wbo-n0-Dic"/>
+                    <constraint firstAttribute="trailing" secondItem="RqM-yK-aOJ" secondAttribute="trailing" constant="10" id="wkK-NV-QNZ"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="descpLabel" destination="Ywq-3w-vte" id="dMq-WW-04b"/>
+                <outlet property="titleLabel" destination="RqM-yK-aOJ" id="P6N-TJ-gBo"/>
+                <outlet property="youtubeImage" destination="X9b-wj-Pek" id="avG-Ak-ul5"/>
+            </connections>
+            <point key="canvasLocation" x="129.7709923664122" y="124.29577464788733"/>
         </tableViewCell>
     </objects>
 </document>
